Fix footer on Safari and chrome

--- a/css/default.css
+++ b/css/default.css
@@ -192,23 +192,28 @@ p {
   font-size: 2.8em;
 }
 
-footer {
-  padding: 12px;
+footer > div {
   background-color: #222222;
   color: #666;
   margin-top: 32px;
   text-align: right;
   display: flex;
   flex-direction: row;
+  align-items: stretch;
+  justify-content: center;
+  align-items: stretch;
+  position: relative;
+  padding: 12px;
 }
 
-footer > div {
-  margin: auto;
-  flex: 1;
+footer > div > div {
   text-align: right;
+  flex-basis: auto;
+  flex: 1;
+  margin: auto;
 }
 
-footer > div:first-child {
+footer > div > div:first-child {
   text-align: left;
 }
 
@@ -492,7 +497,7 @@ pre code {
   color: #bbb;
   border-radius: 4px;
   cursor: pointer;
-  transition: all 0.3s ease-out;
+  transition: all 0.3 s ease-out;
   text-decoration: none;
   font-family: sans-serif;
   font-size: 0.8;
